# simple-conduit

./: .gitignore  README.md  default.nix  simple-conduit.cabal
Conduit/: Simple.hs  Simple.idr
Conduit/Simple/: Compat.hs  Core.hs
test/: bench.hs  main.hs
