Name:                simple-conduit
Version:             0.6.0
Synopsis:            A simple streaming I/O library based on monadic folds
Description:
  @simple-conduit@ follows a similar UI to the more capable @conduit@ library,
  but reduces the scope of what it can solve down to what can be expressed by
  chaining monadic folds that allow for early termination.  This allows for
  more predictable resource management behavior, at the cost of not allowing
  scenarios that @conduit@ is better designed.

License:             BSD3
License-file:        LICENSE
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/jwiegley/simple-conduit

Library
  ghc-options:     -Wall -O2 -funbox-strict-fields
  Exposed-modules:
    Conduit.Simple
    Conduit.Simple.Compat
    Conduit.Simple.Core
  Build-depends:
      base                     >= 4.3          && < 5
    , bifunctors
    , bytestring
    , chunked-data
    , containers
    , either
    , exceptions
    , filepath
    , free
    , lifted-async
    , lifted-base              >= 0.1
    , mmorph
    , monad-control            >= 1.0.0
    , mono-traversable         >= 1.0 && < 1.1
    , mtl
    , mwc-random
    , primitive
    , semigroups
    , stm
    , streaming-commons
    , text
    , transformers             >= 0.2.2        && < 0.6
    , transformers-base        >= 0.4.1        && < 0.6
    , vector

benchmark bench
  hs-source-dirs: .
  ghc-options: -O2 -funbox-strict-fields
  other-modules: Conduit.Simple.Compat
  main-is: test/bench.hs
  type: exitcode-stdio-1.0
  cpp-options: -DTEST
  build-depends:
      simple-conduit
    , base
    , vector
    , hspec >= 1.3
    , QuickCheck
    , transformers
    , lifted-async
    , stm
    , foldl
    , transformers-base
    , primitive
    , chunked-data
    , CC-delcont
    , bytestring
    , mono-traversable
    , streaming-commons
    , filepath
    , mwc-random
    , lifted-base
    , monad-control
    , either
    , exceptions
    , free
    , mmorph
    , bifunctors
    , semigroups
    , mtl
    , void
    , containers
    , text
    , criterion
    , conduit
    , conduit-extra
    , conduit-combinators

source-repository head
  type:     git
  location: git://github.com/jwiegley/simple-conduit.git
